--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div>developed</div>
-    <div>22</div>
+    <div>hagu padu</div>
     <div>33</div>
     <div>44</div>
     <div>44</div>
